--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "@hotwired/turbo-rails": "^7.3.0",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@popperjs/core": "^2.11.8",
+    "@rails/webpacker": "5.4.4",
     "bootstrap": "^5.3.0",
-    "webpack": "^5.84.1",
-    "webpack-cli": "^5.1.1"
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
   "scripts": {
     "build": "webpack --config webpack.config.js"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3"
   }
 }
